# hoxline

./: .gitignore  CLAIM_BOUNDARY.md  LICENSE  PRODUCT_BOUNDARY.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
.release/: claim-firewall-v0.1.0-discussion.md  claim-firewall-v0.1.0-release-notes.md
claimfirewall/: __init__.py
docs/case-growth/: CASE_GROWTH_SOURCE_MAP_V0.md  HOXLINE_CASE_GROWTH_INDEX_V0.md
docs/claim-authority/: CLAIM_AUTHORITY.md  CLAIM_AUTHORITY_V1.md  CLAIM_FIREWALL_COMPATIBILITY.md  POLICY_PACKS.md
docs/demo/: CLAIM_DECISION_TABLE.md  HOXLINE_CONTROLLED_DEMO_V0.md  HOXLINE_ONE_COMMAND_REVIEWER_DEMO_V0.md  HO_DET_001_WALKTHROUGH.md
docs/gauntlet/: AEVUMGUARD_GAUNTLET_V0.md  (+6 more)
examples/: fail.md  pass.md
hoxline/: __init__.py
policy/: blocked_claims.yml
schemas/: artifact-intake-v1.schema.json  artifact-manifest-v1.schema.json  case-growth-index-v0.schema.json  claim-authority-decision-v1.schema.json  claim-authority-policy-v0.schema.json  demo-run-v0.schema.json  evidence-graph-v0.schema.json  evidence-graph-v1.schema.json  gauntlet-full-loop-run-v0.schema.json  gauntlet-run-v1.schema.json  multi-artifact-review-index-v1.schema.json  promotion-state-v0.schema.json  proofcard-v0.schema.json  proofcard-v1.schema.json  review-machine-state-v1.schema.json  reviewer-pack-v0.schema.json  telemetry-contract-v1.schema.json  work-impact-metrics-v0.schema.json
tests/: test_action_contract.py  test_blocked_claims.py  test_case_growth_index_v0.py  test_claim_authority.py  test_claim_authority_v1.py  test_cli.py  test_context_rules.py  test_evidence_graph_v1.py  test_gauntlet_metrics_v0.py  test_gauntlet_v0.py  test_gauntlet_v1.py  test_gauntlet_v1_source_manifest.py  test_ho_det_001_bridge.py  test_hoxline_gauntlet.py  test_multi_artifact_review_manifest_expansion_v1.py  test_one_command_reviewer_demo_v0.py  test_policy_loading.py  test_proofcard_v1.py  test_review_engine_v1.py
(+126 files in other folders)
