[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-firewall"
version = "0.1.0"
description = "Claim Firewall local wording policy scanner for blocked claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HawkinsOperations" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
claimfirewall = "claimfirewall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
