[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hoxline"
version = "0.1.0"
description = "Hoxline ProofOps control plane with Claim Firewall wording enforcement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "HawkinsOperations" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
claimfirewall = "claimfirewall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
